--- a/EulerProject/packages.config
+++ b/EulerProject/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MathNet.Numerics" version="3.13.1" targetFramework="net461" />
+  <package id="morelinq" version="2.0.0" targetFramework="net461" />
   <package id="XAct.Wintellect.PowerCollections" version="0.0.1" targetFramework="net452" />
 </packages>
