problem 136 attempt to solve - not accepted yet

--- a/EulerProject/EulerProject.csproj
+++ b/EulerProject/EulerProject.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Problem102.cs" />
     <Compile Include="Problem107.cs" />
     <Compile Include="Problem11.cs" />
+    <Compile Include="Problem136.cs" />
     <Compile Include="Problem21.cs" />
     <Compile Include="Problem22.cs" />
     <Compile Include="Problem4.cs" />
