--- a/EulerProject/EulerProject.csproj
+++ b/EulerProject/EulerProject.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Problem050.cs" />
     <Compile Include="Problem101.cs" />
     <Compile Include="Problem102.cs" />
     <Compile Include="Problem107.cs" />
