--- a/EulerProject.UnitTests/EulerProject.UnitTests.csproj
+++ b/EulerProject.UnitTests/EulerProject.UnitTests.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Problem050Tests.cs" />
+    <Compile Include="Problem072Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -71,6 +72,9 @@
       <Project>{1663A38C-A1B4-4952-BFEA-BDBA1C6BF66D}</Project>
       <Name>EulerProject</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
