--- a/EulerProject/EulerProject.csproj
+++ b/EulerProject/EulerProject.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Problem22.cs" />
     <Compile Include="Problem4.cs" />
     <Compile Include="Problem5.cs" />
+    <Compile Include="Problem072.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities.cs" />
