--- a/EulerProject.UnitTests/EulerProject.UnitTests.csproj
+++ b/EulerProject.UnitTests/EulerProject.UnitTests.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="Problem050Tests.cs" />
     <Compile Include="Problem072Tests.cs" />
+    <Compile Include="Problem073Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
