--- a/EulerProject.UnitTests/packages.config
+++ b/EulerProject.UnitTests/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FluentAssertions" version="4.19.4" targetFramework="net452" />
-  <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net452" />
-  <package id="MSTest.TestFramework" version="1.3.0-beta2" targetFramework="net452" />
+  <package id="FluentAssertions" version="5.0.0" targetFramework="net471" />
+  <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net471" developmentDependency="true" />
+  <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net471" />
+  <package id="MSTest.TestFramework" version="1.3.0-beta2" targetFramework="net471" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net471" />
 </packages>
