--- a/EulerProject.UnitTests/EulerProject.UnitTests.csproj
+++ b/EulerProject.UnitTests/EulerProject.UnitTests.csproj
@@ -81,6 +81,10 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="problem607_equation.jpg" />
+    <None Include="problem607_notes.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
